--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#00A5FF</color>
+    <color name="colorPrimaryDark">#008FE0</color>
+    <color name="colorAccent">#00A5FF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="whiteLilac">#F5F3FB</color>
+    <color name="dustyGrey">#999999</color>
+    <color name="sandyBrown">#F5A759</color>
+    <color name="alto">#DEDEDE</color>
 </resources>
