--- a/app/src/main/res/layout/content_detail_layout.xml
+++ b/app/src/main/res/layout/content_detail_layout.xml
@@ -25,26 +25,28 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tv_director_label"
+            app:layout_constraintStart_toStartOf="@+id/tv_runtime_label"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_runtime_label"
+            android:id="@+id/tv_genres_label"
             style="@style/MovieDetailTextStyle"
             android:layout_marginTop="16dp"
-            android:text="@string/runtime"
+            android:text="@string/genres"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_detail" />
 
         <TextView
-            android:id="@+id/tv_runtime"
+            android:id="@+id/tv_genres"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintStart_toEndOf="@+id/tv_runtime_label"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tv_genres_label"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_detail"
-            tools:text="75m" />
+            tools:text="Animation / Adventure" />
 
         <TextView
             android:id="@+id/tv_date_label"
@@ -52,7 +54,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/released_date"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_runtime" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_genres" />
 
         <TextView
             android:id="@+id/tv_date"
@@ -61,46 +63,46 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@+id/tv_date_label"
-            app:layout_constraintTop_toBottomOf="@+id/tv_runtime"
+            app:layout_constraintTop_toBottomOf="@+id/tv_genres"
             tools:text="December 12, 2019" />
 
         <TextView
-            android:id="@+id/tv_director_label"
+            android:id="@+id/tv_runtime_label"
             style="@style/MovieDetailTextStyle"
             android:layout_marginTop="8dp"
-            android:text="@string/director"
+            android:text="@string/runtime"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_date" />
 
         <TextView
-            android:id="@+id/tv_director"
+            android:id="@+id/tv_runtime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_director_label"
+            app:layout_constraintStart_toEndOf="@+id/tv_runtime_label"
             app:layout_constraintTop_toBottomOf="@+id/tv_date"
-            tools:text="John Abraham" />
+            tools:text="1h 30m" />
 
         <TextView
-            android:id="@+id/tv_actor_label"
+            android:id="@+id/tv_productions_label"
             style="@style/MovieDetailTextStyle"
             android:layout_marginTop="8dp"
-            android:text="@string/actors"
+            android:text="@string/productions"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_director_label" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_runtime_label" />
 
         <TextView
-            android:id="@+id/tv_actors"
+            android:id="@+id/tv_productions"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_actor_label"
-            app:layout_constraintTop_toBottomOf="@+id/tv_director"
-            tools:text="Actor" />
+            app:layout_constraintStart_toEndOf="@+id/tv_productions_label"
+            app:layout_constraintTop_toBottomOf="@+id/tv_runtime"
+            tools:text="Walt Disney" />
 
         <TextView
             android:id="@+id/tv_episode_label"
@@ -109,7 +111,7 @@
             android:text="@string/episode"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_actors" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_productions" />
 
         <TextView
             android:id="@+id/tv_episode"
@@ -119,7 +121,7 @@
             android:layout_marginTop="8dp"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@+id/tv_episode_label"
-            app:layout_constraintTop_toBottomOf="@+id/tv_actors"
+            app:layout_constraintTop_toBottomOf="@+id/tv_productions"
             tools:text="13 Episodes" />
 
     </android.support.constraint.ConstraintLayout>
