--- a/app/src/main/res/layout/movie_widget.xml
+++ b/app/src/main/res/layout/movie_widget.xml
@@ -13,7 +13,8 @@
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
