--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -19,12 +19,12 @@
     <PreferenceCategory app:title="Reminder">
 
         <SwitchPreferenceCompat
-            app:key="today_reminder"
-            app:title="Today Reminder" />
+            app:key="daily_reminder"
+            app:title="Daily Reminder" />
 
         <SwitchPreferenceCompat
-            app:key="upcoming_reminder"
-            app:title="Upcoming Reminder" />
+            app:key="release_reminder"
+            app:title="Release Reminder" />
 
     </PreferenceCategory>
 
